--- a/src/app/features/feature-portfolio/components/statistic/statistic.component.html
+++ b/src/app/features/feature-portfolio/components/statistic/statistic.component.html
@@ -10,7 +10,7 @@
 
 <div class="hero-statistic">
   <div class="hero-statistic-item">
-    <h1>{{ projectCopiled }} K</h1>
+    <h1>{{ projectCopiled }} +</h1>
     <p>Projects Complited</p>
    </div>
 
