update hero and work image

--- a/src/app/features/feature-portfolio/components/page-heading/page-heading.component.scss
+++ b/src/app/features/feature-portfolio/components/page-heading/page-heading.component.scss
@@ -54,7 +54,7 @@
             }
           
             to {
-              width: 11rem;
+              width: 250px;
             }
         }
     }
