--- a/src/app/features/feature-portfolio/components/portfolio-section/portfolio-section.component.scss
+++ b/src/app/features/feature-portfolio/components/portfolio-section/portfolio-section.component.scss
@@ -36,7 +36,7 @@
       background-color: white;
 
       img {
-        object-fit: fill;
+        object-fit: cover;
         height: 100%;
         width: 100%;
       }
