--- a/src/app/features/feature-portfolio/components/about/experience-section/experience-section.component.html
+++ b/src/app/features/feature-portfolio/components/about/experience-section/experience-section.component.html
@@ -7,7 +7,12 @@
   </div>
 
  <div class="timeline-container">
-  <hr>
+  <!-- <hr> -->
+   <div class="timeline-dots">
+    <mat-icon svgIcon="outlined-dot"></mat-icon>
+    <mat-icon svgIcon="outlined-dot"></mat-icon>
+    <mat-icon svgIcon="outlined-dot"></mat-icon>
+   </div>
   <div class="timeline">
     <div class="timeline-item" *ngFor="let experience of experiences">
        <h4>{{ experience.title }}</h4>
