--- a/src/app/features/feature-portfolio/components/blog-section/blog-section.component.html
+++ b/src/app/features/feature-portfolio/components/blog-section/blog-section.component.html
@@ -2,7 +2,10 @@
   <h1>BLOG</h1>
   <div class="title">
     <h1>Recent Blog</h1>
-    <button>DISCOVER MORE <img src="assets/arrow-right.svg"></button>
+    <button>
+      DISCOVER MORE 
+      <mat-icon svgIcon="arrow-right2"></mat-icon>
+    </button>
   </div>
 
   <div class="content">
