--- a/src/app/features/feature-portfolio/components/blog-section/blog-section.component.scss
+++ b/src/app/features/feature-portfolio/components/blog-section/blog-section.component.scss
@@ -42,9 +42,9 @@
             padding-right: 30px;
             margin-bottom: 5px;
 
-            img{
-                width: 24px;
-                height: 24px;
+            mat-icon{
+                width: 18vpx;
+                height: 18px;
                 margin-left: 10px;
             }
         }
