--- a/src/app/features/feature-portfolio/components/about/experience-section/experience-section.component.scss
+++ b/src/app/features/feature-portfolio/components/about/experience-section/experience-section.component.scss
@@ -40,6 +40,19 @@
       border: 1px dashed var(--white);
     }
 
+    .timeline-dots{
+      height: 100%;
+      width: 1px;
+      border: 1px dashed var(--white);
+
+      mat-icon{
+        position: relative;
+        left: -12px;
+        margin-top: 120px;
+        margin-bottom: 150px;
+      }
+    }
+
     .timeline{
        display: grid;
        width: 90%;
