--- a/src/app/features/feature-portfolio/components/page-heading/page-heading.component.scss
+++ b/src/app/features/feature-portfolio/components/page-heading/page-heading.component.scss
@@ -104,6 +104,10 @@
             h1 {
                 font-size: 24px;
             }
+
+            .hero-name-line {
+                margin-left: 0px;
+            }
         }
     
         h2 {
@@ -129,6 +133,10 @@
         .name {
             h1 {
                 font-size: 24px;
+            }
+
+            .hero-name-line {
+                margin-left: 0px;
             }
         }
     
