--- a/src/app/core/pages/not-found/not-found.component.html
+++ b/src/app/core/pages/not-found/not-found.component.html
@@ -32,8 +32,8 @@
   <div class="status">
     <h1>404</h1>
 
-    <mat-icon svgIcon="spark-ornament-icon"></mat-icon>
-    <mat-icon svgIcon="spark-ornament-icon"></mat-icon>
+    <mat-icon svgIcon="spark-ornament"></mat-icon>
+    <mat-icon svgIcon="spark-ornament"></mat-icon>
 
     <div class="not-found-cross">
        <p>NOT FOUND</p>
