--- a/src/app/features/feature-portfolio/components/about/achievement-section/achievement-section.component.html
+++ b/src/app/features/feature-portfolio/components/about/achievement-section/achievement-section.component.html
@@ -13,7 +13,7 @@
 
       <div class="item-icon">
          <mat-icon svgIcon="magic-wand-icon"></mat-icon>
-         <mat-icon svgIcon="spark-ornament-icon"></mat-icon>
+         <mat-icon svgIcon="spark-ornament"></mat-icon>
       </div>
     </div>
   </div>
