--- a/src/app/core/components/footer/footer.component.html
+++ b/src/app/core/components/footer/footer.component.html
@@ -34,7 +34,7 @@
 
     <span><mat-icon svgIcon="address-icon"></mat-icon> Chisinau, Moldova</span>
     <span><mat-icon svgIcon="phone-icon"></mat-icon>+373-695-63326</span>
-    <span><mat-icon svgIcon="email-icon"></mat-icon> best.developer@dev.com</span>
+    <span><mat-icon svgIcon="email-icon"></mat-icon> best.developer&#64;dev.com</span>
   </div>
 </div>
 
