--- a/src/app/features/feature-portfolio/components/resume/resume-about-me-section/resume-about-me-section.component.html
+++ b/src/app/features/feature-portfolio/components/resume/resume-about-me-section/resume-about-me-section.component.html
@@ -26,7 +26,7 @@
                 <p>:5+ Years</p>
                 <p>:+373 76 775 951</p>
                 <p>:English, Russian, Italian</p>
-                <p>:vb.development@dev.com</p>
+                <p>:vb.development&#64;dev.com</p>
               </div>
             </div>
   
