--- a/src/app/features/feature-portfolio/pages/contact-page/contact-page.component.html
+++ b/src/app/features/feature-portfolio/pages/contact-page/contact-page.component.html
@@ -21,7 +21,7 @@
             <mat-icon svgIcon="email-icon"></mat-icon>
             <div class="inner-contact-item">
                <p>Email</p>
-               <p>myemail@data.com</p>
+               <p>myemail&#64;data.com</p>
             </div>
            </div>
 
