--- a/src/app/core/components/shell/shell.component.html
+++ b/src/app/core/components/shell/shell.component.html
@@ -6,7 +6,7 @@
     <router-outlet></router-outlet>
   </div>
   <div class="page-footer">
-    <app-footer></app-footer>
+    <footer class="app-footer"></footer>
   </div>
 
   <div class="top-scroller" *ngIf="scrollPosition">
