--- a/src/app/features/feature-portfolio/components/about/skills-section/skills-section.component.html
+++ b/src/app/features/feature-portfolio/components/about/skills-section/skills-section.component.html
@@ -3,7 +3,8 @@
 <h1>Discover My Skills</h1>
 
 <div class="skill-level">
-  <div class="skill-level-item" *ngFor="let skill of skills">
+@for (skill of skills; track $index) {
+    <div class="skill-level-item">
     <div class="skill-title">
      <p>{{ skill.title }}</p>
      <p>{{ skill.level }}</p>
@@ -13,5 +14,6 @@
       <div class="progress persantage"></div> 
     </div>
   </div>
+}
 </div>
 </div>
