--- a/src/app/features/feature-portfolio/components/resume/resume-experience-section/resume-experience-section.component.html
+++ b/src/app/features/feature-portfolio/components/resume/resume-experience-section/resume-experience-section.component.html
@@ -4,9 +4,11 @@
   <hr> 
 
   <div class="timeline">
-    <div class="timeline-item" *ngFor="let experience of experiences">
+    @for (experience of experiences; track $index) {
+      <div class="timeline-item">
        <h4>{{ experience.title }}</h4>
        <p>{{ experience.period }}</p>
        <p>{{ experience.description }}</p>
     </div>
+    }
 </div>
