--- a/src/app/core/components/navbar/navbar.component.scss
+++ b/src/app/core/components/navbar/navbar.component.scss
@@ -18,6 +18,11 @@
 
     .logo {
       margin-right: 100px;
+
+      &:hover{
+        cursor: pointer;
+        opacity: 0.8;
+      }
     }
 
     .navbar-link-items {
