--- a/src/app/features/feature-portfolio/components/about/experience-section/experience-section.component.html
+++ b/src/app/features/feature-portfolio/components/about/experience-section/experience-section.component.html
@@ -13,11 +13,13 @@
     <mat-icon svgIcon="outlined-dot"></mat-icon>
    </div>
   <div class="timeline">
-    <div class="timeline-item" *ngFor="let experience of experiences">
+   @for (experience of experiences; track $index) {
+     <div class="timeline-item">
        <h4>{{ experience.title }}</h4>
        <p>{{ experience.period }}</p>
        <p>{{ experience.description }}</p>
     </div>
+   }
   </div>
  </div>
 </div>
