--- a/src/app/features/feature-portfolio/components/portfolio-section/portfolio-section.component.html
+++ b/src/app/features/feature-portfolio/components/portfolio-section/portfolio-section.component.html
@@ -5,29 +5,27 @@
   <div class="work">
 
     <div class="work-row">
-      <div class="work-item" 
-       (click)="onWorkItemClick(portfolioWork.id)" 
-       *ngFor="let portfolioWork of portfolioWorksFirstRow">
-
+      @for (portfolioWork of portfolioWorksFirstRow; track $index) {
+        <div class="work-item" (click)="onWorkItemClick(portfolioWork.id)">
         <img src="{{portfolioWork.image}}" alt="img" loading="lazy"> 
         <div class="inner-work-item">
            <h3>{{portfolioWork.title}}</h3>
            <p>{{portfolioWork.subtitle}}</p>
         </div>
       </div>
+      }
     </div>
    
     <div class="work-row">
-      <div class="work-item" 
-      (click)="onWorkItemClick(portfolioWork.id)" 
-      *ngFor="let portfolioWork of portfolioWorksSecondRow">
-      
+      @for (portfolioWork of portfolioWorksSecondRow; track $index) {
+        <div class="work-item"  (click)="onWorkItemClick(portfolioWork.id)">
         <img src="{{portfolioWork.image}}" alt="img" loading="lazy">
         <div class="inner-work-item">
           <h3>{{portfolioWork.title}}</h3>
           <p>{{portfolioWork.subtitle}}</p>
        </div>
       </div>
+      }
     </div>
   </div>
 </div>
