--- a/src/app/features/feature-portfolio/components/testimonial-section/testimonial-section.component.html
+++ b/src/app/features/feature-portfolio/components/testimonial-section/testimonial-section.component.html
@@ -2,8 +2,9 @@
   <h1>TESTIMONIAL</h1>
   <h2>Clients Feedback</h2>
 
-  <ng-container *ngFor="let testimonial of testimonials; let index = index">
-    <div class="testimonial-card" *ngIf="index === currentSlide">
+  @for (testimonial of testimonials; track $index) {
+   @if ($index ?? currentSlide) {
+     <div class="testimonial-card">
       <div class="image">
         <img src="{{ testimonial.image }}" alt="img" loading="lazy">
       </div>
@@ -19,16 +20,20 @@
           <div class="vertical-line"></div>
 
           <div class="rating">
-            <mat-icon svgIcon="star" *ngFor="let star of stars"></mat-icon>
+            @for (star of stars; track $index) {
+              <mat-icon svgIcon="star"></mat-icon>
+            }
            <p>5.0/5.0</p>
          </div>
         </div>
       </div>
   </div>
-  </ng-container>
+   }
+  }
 
-  <ng-container *ngFor="let testimonial of testimonials; let index = index">
-    <div class="testimonial-card-mobile" *ngIf="index === currentSlide">
+@for (testimonial of testimonials; track $index) {
+    @if ($index === currentSlide) {
+      <div class="testimonial-card-mobile">
       <p>{{ testimonial.description }}</p>
   
         <div class="hero-details">
@@ -39,18 +44,23 @@
             <p>{{ testimonial.position }}</p>
   
             <div class="rating">
-              <mat-icon svgIcon="star" *ngFor="let star of stars"></mat-icon>
+              @for (stars of stars; track $index) {
+                <mat-icon svgIcon="star"></mat-icon>
+              }
               <p>5.0/5.0</p>
              </div>
            </div>
          </div>
         </div>
     </div>
-  </ng-container>
+    }
+}
 
   <div class="testimonial-navigation">
    <button class="slide-button" matButton (click)="goToPrevious(-1)">
-     <mat-icon svgIcon="chevron-left" *ngFor="let arrow of arrows"></mat-icon>
+     @for (arrow of arrows; track $index) {
+      <mat-icon svgIcon="chevron-left"></mat-icon>
+     }
      <span>PREVIOUS</span>
    </button>
 
@@ -62,7 +72,9 @@
 
    <button class="slide-button second-slide-button" matButton (click)="goToNext(-1)">
     <span>NEXT</span>
-    <mat-icon svgIcon="chevron-right" *ngFor="let arrow of arrows"></mat-icon>
+    @for (arrow of arrows; track $index) {
+      <mat-icon svgIcon="chevron-right"></mat-icon>
+    }
   </button>
  </div>
 </div>
