--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,7 @@
-@import "custom"; 
+@use "custom"; 
 //Here we importing _custom.scss file but we don't need to include underscore.
-$theme:   mat-light-theme($primary,$accent,$warn);
-@include angular-material-theme($theme);
+// $theme:   mat-light-theme($primary,$accent,$warn);
+// @include angular-material-theme($theme);
 
 :root{
     
