--- a/src/styles/_custom.scss
+++ b/src/styles/_custom.scss
@@ -1,5 +1,6 @@
 @use '@angular/material' as mat;
-@include mat.core();
+@include mat.elevation-classes();
+@include mat.app-background();
 
 // Create the theme
 $my-theme: mat.define-theme((
